--- a/Hackthon1_submission.ipynb
+++ b/Hackthon1_submission.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## summer analytics problem"
+        "## Predicting Likelihood of getting vaccinated"
       ],
       "metadata": {
         "id": "MIt0DDeVKl27"
