<Bhavesh_Joshi>_Datahack.ipynb

--- a/Bhavesh_Joshi_Datahack.ipynb
+++ b/Bhavesh_Joshi_Datahack.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## summer analytics problem"
+        "## Predicting likelihood of getting Vaccinated using Naive Bayes Model"
       ],
       "metadata": {
         "id": "MIt0DDeVKl27"
